--- a/STT/client/src/app/sign-up/sign-up.component.html
+++ b/STT/client/src/app/sign-up/sign-up.component.html
@@ -1,16 +1,22 @@
-<form class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
+<form class="form-signin" #f="ngForm" (ngSubmit)="signUp(f.value)">
   <h2>
     Sign up!
   </h2>
 
-  <div *ngIf="invalidLogin" class="alert alert-danger">
-    Invalid username and/or password.
+  <div *ngIf="invalidSignUp" class="alert alert-danger">
+    Invalid Sign Up.
   </div>
 
-  <label for="inputEmail" class="sr-only">Email address</label>
+  <label for="inputFirstName">First Name</label>
+  <input type="text" name="firstName" id="inputFirstName" ngModel class="form-control">
+  
+  <label for="inputLastName">Last Name</label>
+  <input type="text" name="lastName" id="inputLastName" ngModel class="form-control">  
+
+  <label for="inputEmail"  placeholder="example@svea.com">Email address</label>
   <input type="email" id="inputEmail" name="email" ngModel class="form-control">
   
-  <label for="inputPassword" class="sr-only">Password</label>
+  <label for="inputPassword">Password</label>
   <input type="password" id="inputPassword" name="password" ngModel class="form-control">
   
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
