--- a/STT/client/src/app/sign-up/sign-up.component.html
+++ b/STT/client/src/app/sign-up/sign-up.component.html
@@ -8,10 +8,10 @@
   </div>
 
   <label for="inputFirstName">First Name</label>
-  <input type="text" name="firstName" id="inputFirstName" ngModel class="form-control">
+  <input type="text" name="first_name" id="inputFirstName" ngModel class="form-control">
   
   <label for="inputLastName">Last Name</label>
-  <input type="text" name="lastName" id="inputLastName" ngModel class="form-control">  
+  <input type="text" name="last_name" id="inputLastName" ngModel class="form-control">  
 
   <label for="inputEmail"  placeholder="example@svea.com">Email address</label>
   <input type="email" id="inputEmail" name="email" ngModel class="form-control">
