--- a/STT/client/src/app/login/login.component.html
+++ b/STT/client/src/app/login/login.component.html
@@ -15,3 +15,5 @@
   
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
+
+<p>Don't have account? <a routerLink='/sign-up'>Sign up now!</a></p>
