--- a/STT/app/templates/app/layout.html
+++ b/STT/app/templates/app/layout.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - My Django Application</title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
+
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
-    <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
 
     <base href="/">
 
 </head>
 
 <body>
-    <div class="container body-content">
+    <div class="container">
 {% block content %}{% endblock %}
         <hr/>
         <footer>
@@ -22,9 +26,8 @@
         </footer>
     </div>
 
-    <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
-    <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
-    <script src="{% static 'app/scripts/respond.js' %}"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
 
     {# angular dist scripts #}
     <script type="text/javascript" src="{% static 'angular/inline.bundle.js' %}"></script>
@@ -32,6 +35,8 @@
     <script type="text/javascript" src="{% static 'angular/styles.bundle.js' %}"></script>
     <script type="text/javascript" src="{% static 'angular/vendor.bundle.js' %}"></script>
     <script type="text/javascript" src="{% static 'angular/main.bundle.js' %}"></script>
+
+
 
 {% block scripts %}{% endblock %}
 
