--- a/STT/client/src/app/app.component.html
+++ b/STT/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<navbar></navbar>
+<navbar *ngIf = "authService.isLoggedIn()"></navbar>
 
 <router-outlet></router-outlet>
 
