--- a/STT/client/src/app/login/login.component.html
+++ b/STT/client/src/app/login/login.component.html
@@ -1,19 +1,33 @@
-<form class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
-  <h2>
-    Please sign in
-  </h2>
+<div class="row">
+  <form class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3" #f="ngForm" (ngSubmit)="signIn(f.value)">
+    <!-- <h4 class="center-align">
+      Please Login
+    </h4> -->
+    <div class="row">
+      <div class="col s6 offset-s3">
+        <img class="responsive-img" src="/static/app/images/svea_logo.jpg" alt="Svea Logo">
+      </div>
+    </div>
+    
+    <div *ngIf="invalidLogin" class="alert alert-danger">
+      Invalid username and/or password.
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputEmail">Email address</label>
+        <input type="email" id="inputEmail" name="email" ngModel>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputPassword">Password</label>
+        <input type="password" id="inputPassword" name="password" ngModel>
+      </div>
+    </div>
+    <button class="btn waves-effect waves-light" type="submit">Login</button>
+  </form>
 
-  <div *ngIf="invalidLogin" class="alert alert-danger">
-    Invalid username and/or password.
-  </div>
-
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" name="email" ngModel class="form-control">
-  
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" name="password" ngModel class="form-control">
-  
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
-
-<p>Don't have account? <a routerLink='/sign-up'>Sign up now!</a></p>
+  <p class="col s12 center-align">Don't have account?
+    <a routerLink='/sign-up'>Sign up now!</a>
+  </p>
+</div>
