--- a/STT/app/templates/app/layout.html
+++ b/STT/app/templates/app/layout.html
@@ -1,32 +1,42 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }} - My Django Application</title>
-    {% load staticfiles %}
 
+    {% load staticfiles %}
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
 
-    <base href="/">
+    <base href="/" />
 
 </head>
-
 <body>
-    <div class="container">
-{% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; STT</p>
-        </footer>
+    <div class="body-container">
+        {% block content %}
+        {% endblock %}        
     </div>
-
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <p class="grey-text text-lighten-4">Svea Ekonomi Belgrade office competitions app.</p>
+              </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                &copy; 2018 STT
+            </div>
+        </div>
+    </footer>
     <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
 
     {# angular dist scripts #}
@@ -36,9 +46,14 @@
     <script type="text/javascript" src="{% static 'angular/vendor.bundle.js' %}"></script>
     <script type="text/javascript" src="{% static 'angular/main.bundle.js' %}"></script>
 
+    <!-- Mobile menu initialization -->
+    <script>
+        $(document).ready(function(){
+                $('.sidenav').sidenav();
+            });
+    </script>
 
-
-{% block scripts %}{% endblock %}
+    {% block scripts %}{% endblock %}
 
 </body>
 </html>
