--- a/STT/client/src/app/login/login.component.html
+++ b/STT/client/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     </h4> -->
     <div class="row">
       <div class="col s6 offset-s3">
-        <img class="responsive-img" src="/static/app/images/svea_logo.jpg" alt="Svea Logo">
+        <img class="responsive-img" src="/static/app/images/svea_medium_logo.png" alt="Svea Logo">
       </div>
     </div>
     
