--- a/STT/app/static/app/content/site.css
+++ b/STT/app/static/app/content/site.css
@@ -4,6 +4,11 @@ body {
     color: rgb(51, 51, 51)
 }
 
+.main-content
+{
+    padding-top: 20px; 
+}
+
 /*Setting materialize theme colors*/
 .nav-wrapper {
     background-color: #1091a7;
@@ -70,6 +75,10 @@ body {
 
 /* styles for validation helpers */
 .field-validation-error {
+    position: relative;
+    min-height: 18px;
+    display: block;
+    font-size: 12px;
     color: #b94a48;
 }
 
