--- a/STT/client/src/app/app.component.html
+++ b/STT/client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <navbar *ngIf = "authService.isLoggedIn()"></navbar>
-<div class="container">
+<div class="container main-content">
     <router-outlet></router-outlet>
 </div>
+<app-footer>
+
