--- a/STT/client/src/app/login/login.component.html
+++ b/STT/client/src/app/login/login.component.html
@@ -1,27 +1,26 @@
 <div class="row">
-  <form class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3" #f="ngForm" (ngSubmit)="signIn(f.value)">
-    <!-- <h4 class="center-align">
-      Please Login
-    </h4> -->
+  <form class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3" [formGroup]="loginForm" (ngSubmit)="signIn()">
     <div class="row">
       <div class="col s6 offset-s3">
-        <img class="responsive-img" src="/static/app/images/svea_medium_logo.png" alt="Svea Logo">
+        <img class="responsive-img" src="/static/app/images/svea_logo_medium.png" alt="Svea Logo">
       </div>
     </div>
     
-    <div *ngIf="invalidLogin" class="alert alert-danger">
+    <div *ngIf="loginForm.errors" class="alert alert-danger">
       Invalid username and/or password.
     </div>
     <div class="row">
       <div class="input-field col s12">
         <label for="inputEmail">Email address</label>
-        <input type="email" id="inputEmail" name="email" ngModel>
+        <input formControlName="email" type="email" id="inputEmail" name="email">
+        <span class="field-validation-error" *ngIf="email.touched && email.invalid" >You must provide valid email.</span>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
         <label for="inputPassword">Password</label>
-        <input type="password" id="inputPassword" name="password" ngModel>
+        <input formControlName="password" type="password" id="inputPassword" name="password">
+        <span class="field-validation-error " *ngIf="password.touched && password.invalid" >Password is reqired.</span>
       </div>
     </div>
     <button class="btn waves-effect waves-light" type="submit">Login</button>
