--- a/STT/client/src/app/navbar/navbar.component.html
+++ b/STT/client/src/app/navbar/navbar.component.html
@@ -19,5 +19,5 @@
     <li><a routerLink="/">Competitions</a></li>
     <li><a routerLink="/">Profile</a></li>
     <li><a routerLink="/">Notifications</a></li>
-    <li class="cyan darken-2"><a (click) = "authService.logout()">Logout</a></li>
+    <li class="cyan darken-2"><a class="cursor-pointer" (click)="authService.logout()">Logout</a></li>
 </ul>
