--- a/STT/static/app/content/site.css
+++ b/STT/static/app/content/site.css
@@ -1,23 +1,85 @@
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding: 0;
+    background-color: #eeeeee;
+    color: rgb(51, 51, 51)
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.main-content
+{
+    padding-top: 20px;
+    flex: 1 0 auto; 
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+/*Setting materialize theme colors*/
+.nav-wrapper {
+    background-color: #1091a7;
+}
+
+.secondary-content>.material-icons {
+    color: #1091a7;
+}
+
+.btn {
+    background-color: #1091a7;
+}
+
+.page-footer{
+    background-color: #1091a7;
+}
+
+/* Customizing Materialize CSS input fields colors START */
+.input-field label {
+    color: #1091a7;
+  }
+  /* label focus color */
+  .input-field input:focus + label {
+    color: #1091a7;
+  }
+  /* label underline focus color */
+  input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+    border-bottom: 1px solid #1091a7;
+    box-shadow: 0 1px 0 0 #1091a7;
+  }
+  /* valid color */
+  .input-field input.valid {
+    border-bottom: 1px solid #1091a7;
+    box-shadow: 0 1px 0 0 #1091a7;
+  }
+  /* invalid color */
+  .input-field input.invalid {
+    border-bottom: 1px solid #1091a7;
+    box-shadow: 0 1px 0 0 #1091a7;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #1091a7;
+  }
+
+/* Customizing Materialize CSS input fields colors END */
+
+.input-field>.material-icons {
+    color: #1091a7;
+}
+
+.input-field>label {
+    color: #1091a7;
+}
+
+.dropdown-content>li>a {
+    color: #1091a7;
+}
+
+.forms-stt {
+    padding: 20px !important;
+    background-color: white;
 }
 
 /* styles for validation helpers */
 .field-validation-error {
+    position: relative;
+    min-height: 18px;
+    display: block;
+    font-size: 12px;
     color: #b94a48;
 }
 
@@ -39,4 +101,19 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
     display: none;
+}
+
+.logo-img {
+    max-height: 64px!important;
+    padding: 5px 0!important;
+}
+
+app-root {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
