--- a/STT/client/src/app/registration-success/registration-success.component.html
+++ b/STT/client/src/app/registration-success/registration-success.component.html
@@ -1,3 +1,14 @@
-<p>
-  Registration successful! Activation link is sent, please check your email.
-</p>
+
+<div class="row">
+  <div class="row">
+    <div class="col s6 offset-s3 center-align">
+      <img class="responsive-img" src="/static/app/images/svea_logo_medium.png" alt="Svea Logo">
+    </div>
+  </div>
+  <div class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3 center-align">
+      <p>Registration successful! We sent you activation link, please check your email.</p>
+  </div>
+  <p class="col s12 center-align">
+      <a routerLink='/login'>Go to Login page</a>
+  </p>
+</div>
