--- a/STT/client/src/app/login/login.component.html
+++ b/STT/client/src/app/login/login.component.html
@@ -1,25 +1,26 @@
 <div class="row">
   <form class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3" [formGroup]="loginForm" (ngSubmit)="signIn()">
     <div class="row">
-      <div class="col s6 offset-s3">
+      <div class="col s6 offset-s3 center-align">
         <img class="responsive-img" src="/static/app/images/svea_logo_medium.png" alt="Svea Logo">
       </div>
     </div>
-    
-    <div *ngIf="loginForm.errors" class="field-validation-error">
-      Invalid username and/or password.
+    <div class="row">
+      <div *ngIf="loginForm.errors" class="col s12 form-validation-error">
+        Invalid username and/or password.
+      </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
         <label for="inputEmail">Email address</label>
-        <input formControlName="email" type="email" id="inputEmail" name="email">
+        <input formControlName="email" type="email" id="inputEmail" name="inputEmail">
         <span class="field-validation-error" *ngIf="email.touched && email.invalid" >You must provide valid email.</span>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
         <label for="inputPassword">Password</label>
-        <input formControlName="password" type="password" id="inputPassword" name="password">
+        <input formControlName="password" type="password" id="inputPassword" name="inputPassword">
         <span class="field-validation-error " *ngIf="password.touched && password.invalid" >Password is reqired.</span>
       </div>
     </div>
