--- a/STT/client/src/app/sign-up/sign-up.component.html
+++ b/STT/client/src/app/sign-up/sign-up.component.html
@@ -1,23 +1,58 @@
-<form class="form-signin" #f="ngForm" (ngSubmit)="signUp(f.value)">
-  <h2>
-    Sign up!
-  </h2>
+<div class="row">
+  <form class="col s12 m8 l6 offset-l3 offset-m2 forms-stt z-depth-3" [formGroup]="signUpForm" (ngSubmit)="signUp()">
+    <div class="row">
+      <div class="col s6 offset-s3 center-align">
+        <img class="responsive-img" src="/static/app/images/svea_logo_medium.png" alt="Svea Logo">
+      </div>
+    </div>
 
-  <div *ngIf="invalidSignUp" class="alert alert-danger">
-    Invalid Sign Up.
-  </div>
+    <div class="row" *ngIf="signUpForm.errors" >
+      <div class="col s12 form-validation-error">
+        Invalid sign up.
+      </div>
+    </div>
 
-  <label for="inputFirstName">First Name</label>
-  <input type="text" name="first_name" id="inputFirstName" ngModel class="form-control">
-  
-  <label for="inputLastName">Last Name</label>
-  <input type="text" name="last_name" id="inputLastName" ngModel class="form-control">  
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputFirstName">First Name</label>
+        <input formControlName="firstName" type="text" id="inputFirstName" name="inputFirstName">
+        <span class="field-validation-error" *ngIf="firstName.touched && firstName.invalid" >First name is required.</span>
+      </div>
+    </div>    
+    
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputLastName">Last Name</label>
+        <input formControlName="lastName" type="text" id="inputLastName" name="inputLastName">
+        <span class="field-validation-error" *ngIf="lastName.touched && lastName.invalid" >Last name is required.</span>
+      </div>
+    </div>    
 
-  <label for="inputEmail"  placeholder="example@svea.com">Email address</label>
-  <input type="email" id="inputEmail" name="email" ngModel class="form-control">
-  
-  <label for="inputPassword">Password</label>
-  <input type="password" id="inputPassword" name="password" ngModel class="form-control">
-  
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputEmail">Email address</label>
+        <input formControlName="email" type="email" id="inputEmail" name="inputEmail">
+        <span class="field-validation-error" *ngIf="email.touched && email.invalid" >You must provide valid email (example@svea.com).</span>
+      </div>
+    </div>    
+
+    <div class="row">
+      <div class="input-field col s12">
+        <label for="inputPassword">Password</label>
+        <input formControlName="password" type="password" id="inputPassword" name="inputPassword">
+        <span *ngIf="password.touched && password.invalid">
+          <span class="field-validation-error" *ngIf="password.errors.required" >Password is reqired.</span>
+          <span class="field-validation-error" *ngIf="password.errors.minlength" >Password must be at least 8 characters long.</span>
+        </span>
+      </div>
+    </div>
+    
+    <button class="btn waves-effect waves-light" type="submit" [disabled]="signUpForm.invalid" >Sign up</button>
+
+  </form>
+
+  <p class="col s12 center-align">Already have account?
+    <a routerLink='/login'>Go to Login page</a>
+  </p>
+
+</div>
