Added async email availability for registration.

--- a/STT/client/src/app/sign-up/sign-up.component.html
+++ b/STT/client/src/app/sign-up/sign-up.component.html
@@ -32,7 +32,11 @@
       <div class="input-field col s12">
         <label for="inputEmail">Email address</label>
         <input formControlName="email" type="email" id="inputEmail" name="inputEmail">
-        <span class="field-validation-error" *ngIf="email.touched && email.invalid" >You must provide valid email (example@svea.com).</span>
+        <span class="field-validation-neutral" *ngIf="email.pending">Checking availability...</span>
+        <span class="field-validation-error" *ngIf="email.touched && email.invalid" >
+          <span *ngIf="email.errors.required || email.errors.email || email.errors.pattern">You must provide valid email (example@svea.com).</span>
+          <span *ngIf="email.errors.shouldBeUnique">This email is already registred.</span>
+        </span>
       </div>
     </div>    
 
@@ -47,7 +51,7 @@
       </div>
     </div>
     
-    <button class="btn waves-effect waves-light" type="submit" [disabled]="signUpForm.invalid" >Sign up</button>
+    <button class="btn waves-effect waves-light" type="submit" [disabled]="signUpForm.invalid || email.pending" >Sign up</button>
 
   </form>
 
