--- a/STT/client/src/app/competitions/competitions.component.html
+++ b/STT/client/src/app/competitions/competitions.component.html
@@ -1,3 +1,3 @@
-<p>
-  competitions works!
-</p>
+<div class="collection">
+  <a href="#!" class="collection-item" *ngFor="let competition of competitions">{{ competition.name }}</a>
+</div>
