--- a/STT/client/src/app/navbar/navbar.component.html
+++ b/STT/client/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             </a>
             <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a routerLink="/">Competitions</a></li>
+                <li><a routerLink="/competitions">Competitions</a></li>
                 <li><a routerLink="/">Profile</a></li>
                 <li><a routerLink="/">Notifications</a></li>
                 <li><a (click) = "authService.logout()">Logout</a></li>
@@ -16,7 +16,7 @@
 </nav>
 
 <ul class="sidenav" id="mobile-menu">
-    <li><a routerLink="/">Competitions</a></li>
+    <li><a routerLink="/competitions">Competitions</a></li>
     <li><a routerLink="/">Profile</a></li>
     <li><a routerLink="/">Notifications</a></li>
     <li><a class="cursor-pointer" (click)="authService.logout()">Logout</a></li>
