--- a/STT/app/static/app/content/site.css
+++ b/STT/app/static/app/content/site.css
@@ -1,133 +1,1 @@
-body {
-    padding: 0;
-    background-color: #eeeeee;
-    color: rgb(51, 51, 51)
-}
-
-.main-content
-{
-    padding-top: 20px;
-    flex: 1 0 auto; 
-}
-
-/*Setting materialize theme colors*/
-.nav-wrapper {
-    background-color: #1091a7;
-}
-
-.secondary-content>.material-icons {
-    color: #1091a7;
-}
-
-.btn {
-    background-color: #1091a7;
-}
-
-.page-footer{
-    background-color: #1091a7;
-}
-
-/* Customizing Materialize CSS input fields colors START */
-.input-field label {
-    color: #1091a7;
-  }
-  /* label focus color */
-  .input-field input:focus + label {
-    color: #1091a7;
-  }
-  /* label underline focus color */
-  input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #1091a7;
-    box-shadow: 0 1px 0 0 #1091a7;
-  }
-  /* valid color */
-  .input-field input.valid {
-    border-bottom: 1px solid #1091a7;
-    box-shadow: 0 1px 0 0 #1091a7;
-  }
-  /* invalid color */
-  .input-field input.invalid {
-    border-bottom: 1px solid #1091a7;
-    box-shadow: 0 1px 0 0 #1091a7;
-  }
-  /* icon prefix focus color */
-  .input-field .prefix.active {
-    color: #1091a7;
-  }
-
-/* Customizing Materialize CSS input fields colors END */
-
-.input-field>.material-icons {
-    color: #1091a7;
-}
-
-.input-field>label {
-    color: #1091a7;
-}
-
-.dropdown-content>li>a {
-    color: #1091a7;
-}
-
-.forms-stt {
-    padding: 20px !important;
-    background-color: white;
-}
-
-/* styles for validation helpers */
-.field-validation-error, .form-validation-error, .field-validation-neutral, .field-validation-valid {
-    position: relative;
-    min-height: 18px;
-    display: block;
-    font-size: 12px;    
-}
-
-.field-validation-error, .form-validation-error{
-    color: #b94a48;
-}
-.field-validation-neutral {
-    color: rgb(51, 51, 51);
-}
-
-.field-validation-valid {
-    color: #50be46;
-}
-
-.form-validation-error {
-    font-size: 16px;
-}
-
-.field-validation-valid {
-    display: none;
-}
-
-input.input-validation-error {
-    border: 1px solid #b94a48;
-}
-
-input[type="checkbox"].input-validation-error {
-    border: 0 none;
-}
-
-.validation-summary-errors {
-    color: #b94a48;
-}
-
-.validation-summary-valid {
-    display: none;
-}
-
-.logo-img {
-    max-height: 64px!important;
-    padding: 5px 0!important;
-}
-
-app-root {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-.cursor-pointer {
-    cursor: pointer;
-}
+/* Styles are defined in Angular client styles.css */
